# opticlens

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  analytical_model.py  analytical_model_v2.py  docker-compose.dev.yml  docker-compose.yml  opticlens_v5.py  opticlens_v9.py  opticlens_v9_1.py  opticlens_v9_2.py  opticlens_v9_4.py  opticlens_v9_5.py  opticlens_v9_7.py  opticlens_v9_8.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  (+5 more)
Netlify/: README.md  netlify.toml  package.json
Netlify/functions/: aeronet.js  alerts.js  api.js  halo.js  mie.js  package-lock.json  package.json  turbulence.js
Netlify/public/: dashboard.html  documentation.html  index.html  reports.html
docs/: OPTIC-LENS_Whitepaper.docx
opticlens/: __init__.py
opticlens/core/: optic_physics.py
opticlens/crystals/: halo.py
opticlens/pinn/: network.py
opticlens/radiative_transfer/: beer_lambert.py
opticlens/raytracing/: engine.py
opticlens/refraction/: edlen.py
opticlens/scattering/: mie.py  mie_v10.py
opticlens/turbulence/: rytov.py
opticlens/utils/: constants.py  validators.py
tests/unit/test_physics/: test_edlen.py  test_mie.py  test_turbulence.py
