[metadata]
name = opticlens
version = 10.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
description = OPTICLENS: Optical Phenomena, Turbulence & Imaging --- Light Environmental Nonlinearity System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://opticlens.netlify.app
project_urls =
    Documentation = https://opticlens.readthedocs.io
    Source = https://github.com/gitdeeper8/opticlens
    DOI = https://doi.org/10.5281/zenodo.18907508
    Dashboard = https://opticlens.netlify.app
    Changelog = https://github.com/gitdeeper8/opticlens/releases
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Optics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
license = CC BY 4.0
keywords =
    atmospheric-optics,
    mie-scattering,
    aerosol,
    turbulence,
    radiative-transfer,
    lidar,
    remote-sensing,
    hyperspectral,
    edlen-equation,
    rytov-theory,
    fried-parameter,
    ray-tracing,
    atmospheric-physics,
    optics,
    scattering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
    notebooks*
    scripts*

[options.entry_points]
console_scripts =
    opticlens = opticlens.cli:main
    opticlens-mie = opticlens.scattering.mie_v10:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    nbsphinx>=0.9.0
viz =
    matplotlib>=3.7.0
    plotly>=5.14.0
    cartopy>=0.21.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,venv,.venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -ra -q --strict-markers --cov=opticlens --cov-report=html --cov-report=term
markers =
    slow: marks tests as slow
    unit: unit tests
    integration: integration tests
    mie: Mie scattering tests

[coverage:run]
source = opticlens
omit = 
    */tests/*
    */test_*.py
    */__init__.py
    */version.py
